<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AplexTest</string>

    <string-array name="viewpager_tabs">
        <item>BuzzTest</item>
        <item>EepromTest</item>
        <item>GPIOTTest</item>
<!--  <item>Com3ModeTest</item> -->
        <item>SerialTool</item>
        <item>Ethernet</item>
        <item>About</item>
        
<!--    
		<item>Stabilitytest</item>
		<item>Stress test</item> -->
    </string-array>
<!--  buzz_test -->
    <string name="buzz_500">500</string>
    <string name="buzz_1000">1000</string>
    <string name="buzz_1500">1500</string>
    <string name="buzz_2000">2000</string>
    <string name="buzz_unit">Unit Hz</string>
    <string name="buzz_toggle_on_text">ON</string>
    <string name="buzz_toggle_off_text">OFF</string>
    <string name="buzz_error_message">Missing read/write permission, trying to chmod the file.</string>
<!--  eepromtest -->
    <string name="eprom_controller_title">Controller</string>
    <string name="eprom_address_title">Address(hex)</string>
    <string name="eprom_address_offset_title">Offset(hex)</string>
    <string name="btn_write">Write</string>
    <string name="btn_read">Read</string>
<!--  gpiotest -->
    <string name="gpio_in_title">IN</string>
    <string name="gpio_out_title">OUT</string>
    <string name="gpio_in_0_text">GetIn0_L</string>
    <string name="gpio_in_1_text">GetIn1_L</string>
    <string name="gpio_in_2_text">GetIn2_L</string>
    <string name="gpio_in_3_text">GetIn3_L</string>
    <string name="gpio_out_0_text">SetOut0_H</string>
    <string name="gpio_out_1_text">SetOut1_H</string>
    <string name="gpio_out_2_text">SetOut2_H</string>
    <string name="gpio_out_3_text">SetOut3_H</string>
<!--  com mode opt -->
    <string-array name="com_mode_opt">
        <item>RS232</item>
        <item>RS485</item>
        <item>RS422</item>
        <item>LoopBack</item>
    </string-array>

    <string name="com3mode_title">COM Mode Opt</string>
    <string name="current_mode">Current:RS485</string>
    <string name="com_mode_rs232">RS232</string>
    <string name="com_mode_rs485">RS485</string>
    <string name="com_mode_rs422">RS422</string>
    <string name="com_mode_loopback">LoopBack</string>
<!--  serialporttool -->
    <string-array name="serialport_opt">
        <item>COM Mode Opt</item>
        <item>Setup</item>
        <item>Console</item>
        <item>LoopBack</item>
		<item>Serialport Stability test</item>
<!--  <item>Send01010101</item> -->
<!--  <item>About</item> -->
<!--  <item>Quit</item> -->
    </string-array>

    <string name="dialog_title">COM Mode</string>
    <string name="serialport_opt_of_com_mode_set">COM Mode Opt</string>
    <string name="serialport_opt_of_setup">Setup</string>
    <string name="serialport_opt_of_console">Console</string>
    <string name="serialport_opt_of_loopback">LoopBack</string>
	<string name="serialport_opt_of_Stability">Serialport Stability test</string>
    <string name="serialport_opt_of_send01010101">Send01010101</string>
<!--  <string name="serialport_opt_of_About">About</string> -->
<!--  <string name="serialport_opt_of_Quit">Quit</string> -->
    <string name="error_configuration">Please configure your serial port from setup first.</string>
    <string name="error_security">You do not have read/write permission to the serial port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
    <string name="send">Send</string>
    <string name="sending">Stop</string>
    <string name="send_auto">auto on</string>
    <string name="send_auto_on">auto on</string>
    <string name="send_auto_off">auto off</string>

    <string-array name="baudrates_name">
        <item>50</item>
        <item>75</item>
        <item>110</item>
        <item>134</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>1800</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>500000</item>
        <item>576000</item>
        <item>921600</item>
        <item>1000000</item>
        <item>1152000</item>
        <item>1500000</item>
        <item>2000000</item>
        <item>2500000</item>
        <item>3000000</item>
        <item>3500000</item>
        <item>4000000</item>
    </string-array>
    <string-array name="baudrates_value">
        <item>50</item>
        <item>75</item>
        <item>110</item>
        <item>134</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>1800</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>500000</item>
        <item>576000</item>
        <item>921600</item>
        <item>1000000</item>
        <item>1152000</item>
        <item>1500000</item>
        <item>2000000</item>
        <item>2500000</item>
        <item>3000000</item>
        <item>3500000</item>
        <item>4000000</item>
    </string-array>

    <string name="sent_bytes">Send byte</string>
    <string name="received_back">Received back</string>
    <string name="lost_bytes">Lost bytes</string>
    <string name="corruptsp">Corrupted</string>
    <string name="send0101">Sending 01010101...</string>
    <string name="init_data">0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="eth_config_title" translatable="false">Configure Ethernet device</string>
    <string name="eth_advanced_title" translatable="false">Advanced Ethernet setting</string>
    <string name="eth_setting" translatable="false">Ethernet setting</string>
    <string name="eth_dev_list" translatable="false">Ethernet Devices:</string>
    <string name="eth_con_type" translatable="false">Connection Type</string>
    <string name="eth_con_type_dhcp" translatable="false">DHCP</string>
    <string name="eth_con_type_manual" translatable="false">Static IP</string>
    <string name="eth_dns" translatable="false">DNS address</string>
    <string name="eth_gw" translatable="false">Gateway address</string>
    <string name="eth_ipaddr" translatable="false">IP address</string>
    <string name="eth_quick_toggle_title" translatable="false">Ethernet</string>
    <string name="eth_quick_toggle_summary" translatable="false">Turn on Ethernet</string>
    <string name="eth_check_config" translatable="false">Check Ethernet</string>
    <string name="eth_do_config" translatable="false">Configure Ethernet</string>
    <string name="eth_conf_summary" translatable="false">Configure Ethernet devices</string>
    <string name="eth_mask" translatable="false">Netmask</string>
    <string name="eth_toggle_summary_off" translatable="false">Turn off Ethernet</string>
    <string name="eth_toggle_summary_on" translatable="false">Turn on Ethernet</string>
    <string name="menu_save">confirm</string>
    <string name="menu_cancel">cancel</string>
    <string name="proxy_setting">Proxy setting</string>
    <string name="eth_proxy">Proxy server</string>
    <string name="proxy_address">Proxy hostname</string>
    <string name="proxy_port">Proxy port</string>
    <string name="proxy_exclusionlist">Bypass proxy for</string>
    <string name="eth_proxy_address">Proxy address</string>
    <string name="show_need_setting">You should setting the static IP and DNS address in this mode</string>
    <string name="advanced_need_setting">You should not set the Proxy address and Proxy port null</string>
    <string name="bypass_hint">You should put valid addresses split by \",\"</string>
    <string name="ethernet_info">Ethernet Info</string>
    <string name="ethernet_config">Ethernet Config</string>
    <string name="percent">0%</string>
    <string name="start_test">Start</string>
    <string name="cancel_test">cancel</string>
    <string name="please_test_first">Please test first</string>
    <string name="test_again">ReStart</string>
    <string name="test_detail">Detail</string>
    <string name="Stress_test_title">Stress test</string>
    <string name="Battery_Electricity">Battery Electricity</string>
    <string name="Battery_temp">Battery Temp</string>
    <string name="Battery_Voltage">Battery Voltage</string>
    <string name="CPU_core_load">CPU Core Load</string>
    <string name="CPU_core_frequency">CPU core frequency</string>
    <string name="CPU_performs">CPU_Performs</string>
    <string name="CPU_All_core_load">CPU All Core Load</string>

    <string-array name="stability_opt">
        <item>memory</item>
    </string-array>

    <string name="memstabilitytest">test</string>
    <string name="stoptest">cencel</string>
    <string name="memsizeopt">Size of Memory Test:</string>
    <string name="memloop">Num of Loop:</string>

    <string-array name="mem1_size">
        <item>50M</item>
        <item>100M</item>
        <item>150M</item>
        <item>200M</item>
    </string-array>
    <string-array name="mem1_loop_time">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    
    <string name="cpu_info">CPU INFO</string>
    
    <string name="Model">Processor</string>
    <string name="frequency">Frequency</string>
    <string name="hardware">Hardware</string>
    
    <string name="mem_info">MEM INFO</string>
    <string name="mem_totalsize">Total Size</string>
    
     <string name="storage_info">STORAGE INFO</string>
    <string name="emmc_totalsize">Total Size</string>
    
</resources>