<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:flatui="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <!---->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.aplex.aplextest.flatui.view.FlatTextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/buzz_unit"
            android:textSize="30sp"
            flatui:fl_borderWidth="2dp"
            flatui:fl_cornerRadius="5dp"
            flatui:fl_fontExtension="ttf"
            flatui:fl_fontFamily="roboto"
            flatui:fl_fontWeight="light"
            flatui:fl_theme="@array/sky"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <RadioGroup
            android:id="@+id/buzz_hz"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <com.aplex.aplextest.flatui.view.FlatRadioButton
                android:checked="true"
                android:paddingLeft="1dp"
                android:id="@+id/buzz_hz_500"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dip"
                android:background="#0000"
                android:text="@string/buzz_500"
                android:textSize="30sp"
                flatui:fl_dotMargin="1dp"
                flatui:fl_size="15dip"
                flatui:fl_theme="@array/sky"/>

            <com.aplex.aplextest.flatui.view.FlatRadioButton
                android:paddingLeft="1dp"
                android:id="@+id/buzz_hz_1000"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dip"
                android:background="#0000"
                android:text="@string/buzz_1000"
                android:textSize="30sp"
                flatui:fl_size="15dip"
                flatui:fl_dotMargin="1dp"

                flatui:fl_theme="@array/sky"/>

            <com.aplex.aplextest.flatui.view.FlatRadioButton

                android:paddingLeft="1dp"
                android:id="@+id/buzz_hz_1500"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dip"
                android:background="#0000"
                android:text="@string/buzz_1500"
                android:textSize="30sp"
                flatui:fl_dotMargin="1dp"
                flatui:fl_size="15dip"
                flatui:fl_theme="@array/sky"/>

            <com.aplex.aplextest.flatui.view.FlatRadioButton
                android:paddingLeft="1dp"
                android:id="@+id/buzz_hz_2000"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dip"
                android:background="#0000"
                android:text="@string/buzz_2000"
                android:textSize="30sp"
                flatui:fl_dotMargin="1dp"
                flatui:fl_size="15dip"
                flatui:fl_theme="@array/sky"/>
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.aplex.aplextest.flatui.view.FlatToggleButton
            android:id="@+id/buzz_toggle"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:text="@string/buzz_toggle_on_text"
            flatui:fl_cornerRadius="25dp"
            flatui:fl_space="14dp"
            flatui:fl_theme="@array/sky"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/buzz_toggle"
            android:text="@string/buzz_toggle_off_text"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/buzz_toggle"
            android:text="@string/buzz_toggle_on_text"
            android:textSize="30sp"/>
    </RelativeLayout>


</LinearLayout>
