<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.aplex.aplextest.flatui.view.FlatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/Battery_Electricity"
            android:textSize="25sp"
            flatui:fl_fontExtension="ttf"
            flatui:fl_fontFamily="roboto" />

        <com.aplex.aplextest.lineview.view.LineChartView
            android:id="@+id/Battery_Electricity"
            android:layout_width="match_parent"
            android:layout_height="300dp" >
        </com.aplex.aplextest.lineview.view.LineChartView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <com.aplex.aplextest.flatui.view.FlatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/Battery_temp"
            android:textSize="25sp"
            flatui:fl_fontExtension="ttf"
            flatui:fl_fontFamily="roboto" />

        <com.aplex.aplextest.lineview.view.LineChartView
            android:id="@+id/Battery_temp"
            android:layout_width="match_parent"
            android:layout_height="300dp" >
        </com.aplex.aplextest.lineview.view.LineChartView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <com.aplex.aplextest.flatui.view.FlatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/Battery_Voltage"
            android:textSize="25sp"
            flatui:fl_fontExtension="ttf"
            flatui:fl_fontFamily="roboto" />

        <com.aplex.aplextest.lineview.view.LineChartView
            android:id="@+id/Battery_Voltage"
            android:layout_width="match_parent"
            android:layout_height="300dp" >
        </com.aplex.aplextest.lineview.view.LineChartView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <com.aplex.aplextest.flatui.view.FlatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/CPU_core_load"
            android:textSize="25sp"
            flatui:fl_fontExtension="ttf"
            flatui:fl_fontFamily="roboto" />

        <com.aplex.aplextest.lineview.view.LineChartView
            android:id="@+id/CPU_core_load"
            android:layout_width="match_parent"
            android:layout_height="300dp" >
        </com.aplex.aplextest.lineview.view.LineChartView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <com.aplex.aplextest.flatui.view.FlatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/CPU_core_frequency"
            android:textSize="25sp"
            flatui:fl_fontExtension="ttf"
            flatui:fl_fontFamily="roboto" />

        <com.aplex.aplextest.lineview.view.LineChartView
            android:id="@+id/CPU_core_frequency"
            android:layout_width="match_parent"
            android:layout_height="300dp" >
        </com.aplex.aplextest.lineview.view.LineChartView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <com.aplex.aplextest.flatui.view.FlatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/CPU_performs"
            android:textSize="25sp"
            flatui:fl_fontExtension="ttf"
            flatui:fl_fontFamily="roboto" />

        <com.aplex.aplextest.lineview.view.LineChartView
            android:id="@+id/CPU_performs"
            android:layout_width="match_parent"
            android:layout_height="300dp" >
        </com.aplex.aplextest.lineview.view.LineChartView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <com.aplex.aplextest.flatui.view.FlatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/CPU_All_core_load"
            android:textSize="25sp"
            flatui:fl_fontExtension="ttf"
            flatui:fl_fontFamily="roboto" />

        <com.aplex.aplextest.lineview.view.LineChartView
            android:id="@+id/CPU_All_core_load"
            android:layout_width="match_parent"
            android:layout_height="300dp" >
        </com.aplex.aplextest.lineview.view.LineChartView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

</ScrollView>